--- a/final-frontend/public/index.html
+++ b/final-frontend/public/index.html
@@ -17,7 +17,11 @@
     />
     <link
       rel="apple-touch-icon"
-      href="%PUBLIC_URL%/logo192.png"
+      href="apple-touch-icon.png"
+    />
+    <link
+      rel="shortcut icon"
+      href="favicon.ico"
     />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -37,9 +41,9 @@
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
     <link
-  rel="stylesheet"
-  href="https://fonts.googleapis.com/icon?family=Material+Icons"
-/>
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
