--- a/final-frontend/public/index.html
+++ b/final-frontend/public/index.html
@@ -1,36 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
     <link
-      rel="icon"
-      href="%PUBLIC_URL%/favicon.ico"
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-    <meta
-      name="viewport"
-      content="width=device-width, initial-scale=1"
-    />
+
+    <meta charset="utf-8" />
+    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
-    <link
-      rel="apple-touch-icon"
-      href="apple-touch-icon.png"
-    />
-    <link
-      rel="shortcut icon"
-      href="favicon.ico"
-    />
+    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="shortcut icon" href="favicon.ico" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
-    <link
-      rel="manifest"
-      href="%PUBLIC_URL%/manifest.json"
-    />
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
     <script
       src="https://unpkg.com/react/umd/react.production.min.js"
@@ -62,10 +52,7 @@
     <title>Cambridge Academy Ethiopia</title>
   </head>
   <body>
-    <noscript
-      >You need to enable JavaScript to run this
-      app.</noscript
-    >
+    <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
       This HTML file is a template.
